// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Probar la clase de Citas Agregar una nueva cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1616102693133,
      "mascota": "Laika",
      "propietario": "Julieta",
      "sintomas": "solo duerme",
      "telefono": "123456",
    },
  ],
}
`;

exports[`Probar la clase de Citas Eliminar Cita 1`] = `
Citas {
  "citas": Array [],
}
`;

exports[`Probar la clase de Citas actualizar cita 1`] = `
Citas {
  "citas": Array [
    Object {
      "fecha": "10-12-2020",
      "hora": "10:30",
      "id": 1616102693133,
      "mascota": "Nuevo Nombre",
      "propietario": "Julieta",
      "sintomas": "Solo duerme",
      "telefono": "19999393",
    },
  ],
}
`;
